components/test-triggers3/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-pac-app
    appstudio.openshift.io/component: test-triggers3
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-triggers3
  namespace: jvm-bld-test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-triggers3
    weight: null
status: {}
